[gd_scene load_steps=47 format=2]

[ext_resource path="res://assets/art/enemy/slimeball_.png" type="Texture" id=1]
[ext_resource path="res://src/Collision/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actor/Slime.gd" type="Script" id=3]
[ext_resource path="res://src/Actor/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Actor/EnemyStateMachine.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Collision/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Collision/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/SPLAT Short 03.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 24, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 48, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 72, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 96, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 120, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 144, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 168, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 24, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 48, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 72, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 120, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 168, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 96, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 120, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 144, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 168, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 120, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 144, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 168, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 24, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 72, 144, 24, 24 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "hit_r",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "hit_l",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "run_r",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "death_l",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "run_l",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle_l",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle_r",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "death_r",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.0
height = 2.5

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5, 5 )

[sub_resource type="CapsuleShape2D" id=37]
radius = 4.5
height = 4.0

[sub_resource type="CircleShape2D" id=28]
radius = 63.0079

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="EnemyStateMachine" parent="." instance=ExtResource( 6 )]
START_STATE = NodePath("DefaultState")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 1 )
animation = "idle_r"
offset = Vector2( 0, -5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -1 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -3.5 )
shape = SubResource( 37 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 28 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -14 )
stats_path = NodePath("../Stats")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="EnemyStateMachine"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
